fix: раскоментировал z-index

--- a/src/modules/pages/business/Slider/Slider.module.scss
+++ b/src/modules/pages/business/Slider/Slider.module.scss
@@ -10,7 +10,7 @@
 
     margin: 0 auto;
 
-    // z-index: -1;
+    z-index: -1;
 
     &__title {
         color: $white-color;
